# family-planner-app

./: .easignore  .gitignore  .railwayignore  CLAUDE.md  Procfile  README.md  deep_diag.js  diagnose.js  diagnose2.js  event_trace.js  final_check.js  railway.json  requirements.txt  screenshot_test.js  serve_test.js  test_input.js  test_pointer.js
backend/: pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 3e85de13ac0b_initial_schema.py  401bff20322f_add_image_url_to_shopping_items.py  4e91d8f09fec_add_shopping_notes_tables.py  686e9f6b10cb_add_push_token_to_users.py  a1b2c3d4e5f6_add_verification_codes_table.py  a7b8c9d0e1f2_add_prayer_city_to_users.py  b2c3d4e5f6a7_add_task_category.py  b8c9d0e1f2a3_add_anniversaries_table.py  c3d4e5f6a7b8_add_events_category_and_custom_products.py  c9d0e1f2a3b4_add_event_recurrence.py  c9f2a1b3d4e5_add_event_attendees.py  d4e5f6a7b8c9_add_family_flags_daily_messages.py  e5f6a7b8c9d0_add_recurring_tasks.py  f6a7b8c9d0e1_move_flags_to_users.py
backend/app/: .env  database.py  main.py  reminders.py
backend/app/anniversaries/: models.py  routes.py
backend/app/auth/: deps.py  email_service.py  models.py  routes.py  schemas.py  security.py
backend/app/events/: models.py  routes.py  schemas.py
backend/app/families/: daily_jobs.py  models.py  routes.py
backend/app/notes/: models.py  routes.py
backend/app/notifications/: models.py  push.py  routes.py  schemas.py
backend/app/recurring_tasks/: routes.py
backend/app/shopping/: models.py  routes.py
backend/app/tasks/: models.py  routes.py  (+1 more)
(+62 files in other folders)
