[tool.poetry]
name = "family-planner-backend"
version = "0.1.0"
description = ""
authors = ["Amine El amrani <amine_el_amrani@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
sqlalchemy = "^2.0.46"
psycopg2-binary = "^2.9.11"
python-jose = "^3.5.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
email-validator = "^2.3.0"
bcrypt = "<4.0.0"
python-multipart = "^0.0.21"
alembic = "^1.18.4"
apscheduler = ">=3.11.0"
pywebpush = "^1.14.0"
cryptography = ">=42.0.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
